# nursing-home-tracker

./: CLAUDE.md  PROBLEMS.md  README.md  pyproject.toml  requirements.txt
config/: owner_types.yaml  sources.yaml
data/: nursing_homes.db
docs/: methodology.md
outreach/: research_notes.md  targets.json
outreach/email_templates/: client.md  media.md  researcher.md
src/: cli.py
src/dashboard/: app.py
src/export/: exporter.py
src/extractors/: csv_parser.py
src/normalization/: owners.py
src/scrapers/: cms_downloader.py
src/storage/: database.py
src/validation/: quality.py  schemas.py
tests/: conftest.py  test_database.py  test_downloader.py  test_extractor.py  test_normalization.py  test_quality.py  test_schemas.py
